src/main/resources/tests/Semantics/good/operationReturn2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : integer;
begin
   X := 10;
end ExampleProcedure;
